--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,6 +1,13 @@
 %h1= group.name
 
+%h2= group.description
+
 %h3 Members:
 
 - group.users.each do |user|
-  %li= link_to user.username, user
+  %li= link_to user.name, user
+  - group.attributes.each do |key, value|
+    - if value == true
+      %li= user.send("#{key}")
+
+
