--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,27 +1,32 @@
 %h1= user.name
-%ul
-  %li
-    Email:
-    = mail_to(user.email)
-  %li
-    Phone:
-    = user.phone
-  %li
-    website:
-    -if user.website
-      = link_to("#{user.website}", "http://"+user.website)
-  %li
-    Address:
-    = user.address
-  %li
-    City:
-    = user.city
-  %li
-    State:
-    = user.state
-  %li
-    Zip:
-    = user.zip
+- if user == current_user
+  %ul
+    %li
+      Email:
+      = mail_to(user.email)
+    %li
+      Phone:
+      = user.phone
+    %li
+      website:
+      -if user.website
+        = link_to("#{user.website}", "http://"+user.website)
+    %li
+      Address:
+      = user.address
+    %li
+      City:
+      = user.city
+    %li
+      State:
+      = user.state
+    %li
+      Zip:
+      = user.zip
+    = link_to "Edit My Profile", [:edit, current_user]
 
--if user == current_user
-  = link_to "Edit My Profile", [:edit, current_user]
+- (user.groups & current_user.groups).each do |group|
+  - group.attributes.each do |key, value|
+    -if value == true
+      %li= key + ":"
+      %li= user.send("#{key}")
