--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,6 @@
-%h2 It's the new way to do contact management.
+.home
+  %h1 Remember Me
+  %h2 It's the new way to do contact management.
 
-- unless user_signed_in?
-  = link_to "Start Remembering!", new_user_registration_path
+  - unless user_signed_in?
+    = link_to "Start Remembering!", new_user_registration_path
