--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,14 +6,20 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    %header
+    #header
       %ul.devise_navigation
         - if user_signed_in?
           %li= link_to 'Create a group', new_group_path
+          %li= link_to 'Join a Group', '#'
+          %li= link_to 'My Groups', groups_path
+          %li= link_to 'My Contacts', users_path
           %li= link_to 'My Profile', user_path(current_user)
           %li= link_to 'Sign out', destroy_user_session_path, method: 'delete'
         - else
           %li= link_to 'Sign in', new_user_session_path
-    .alert= alert
-    .notice= notice
-    = yield
+          %li= link_to 'Sign up', new_user_registration_path
+    %h1#raven= image_tag "Raven_on_Red.png"
+    #content
+      .alert= alert
+      .notice= notice
+      = yield
