--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,5 @@
 %h1= user.name
-- if user == current_user
+-if current_user == user
   %ul
     %li
       Email:
@@ -8,7 +8,7 @@
       Phone:
       = user.phone
     %li
-      website:
+      Website:
       -if user.website
         = link_to("#{user.website}", "http://"+user.website)
     %li
@@ -23,10 +23,11 @@
     %li
       Zip:
       = user.zip
-    = link_to "Edit My Profile", [:edit, current_user]
+  = link_to "Edit My Profile", [:edit, current_user]
 
-- (user.groups & current_user.groups).each do |group|
-  - group.attributes.each do |key, value|
-    -if value == true
-      %li= key + ":"
-      %li= user.send("#{key}")
+-if current_user != user
+  - (user.groups & current_user.groups).each do |group|
+    - group.attributes.each do |key, value|
+      -if value == true
+        %li= key + ":"
+        %li= user.send("#{key}")
