added socail aspects to users and groups

--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -7,6 +7,10 @@
   = f.input :phone, as: :boolean
   = f.input :email, as: :boolean
   = f.input :website, as: :boolean
+  = f.input :company, as: :boolean
+  = f.input :twitter, as: :boolean
+  = f.input :github, as: :boolean
+  = f.input :linkedin, as: :boolean
   = f.input :address, as: :boolean
   = f.input :city, as: :boolean
   = f.input :state, as: :boolean
