--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -4,6 +4,10 @@
   = f.input :name
   = f.input :phone
   = f.input :website
+  = f.input :company
+  = f.input :twitter
+  = f.input :linkedin
+  = f.input :github
   = f.input :address
   = f.input :city
   = f.input :state
