--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,18 +1,19 @@
 %h1 Create New Group
-
-= simple_form_for group do |f|
-  = f.input :name
-  = f.input :invitation_code, label: "Invitation Code"
-  = f.input :description
-  = f.input :phone, as: :boolean
-  = f.input :email, as: :boolean
-  = f.input :website, as: :boolean
-  = f.input :company, as: :boolean
-  = f.input :twitter, as: :boolean
-  = f.input :github, as: :boolean
-  = f.input :linkedin, as: :boolean
-  = f.input :address, as: :boolean
-  = f.input :city, as: :boolean
-  = f.input :state, as: :boolean
-  = f.input :zip, as: :boolean
-  = f.button :submit, "Create Group"
+.g
+  = simple_form_for group do |f|
+    = f.input :name
+    = f.input :invitation_code, label: "Invitation Code"
+    = f.input :description
+    %h3 Permissions:
+    = f.input :phone, as: :boolean
+    = f.input :email, as: :boolean
+    = f.input :website, as: :boolean
+    = f.input :company, as: :boolean
+    = f.input :twitter, as: :boolean
+    = f.input :github, as: :boolean
+    = f.input :linkedin, as: :boolean
+    = f.input :address, as: :boolean
+    = f.input :city, as: :boolean
+    = f.input :state, as: :boolean
+    = f.input :zip, as: :boolean
+    = f.button :submit, "Create Group"
